--- a/index.html
+++ b/index.html
@@ -22,10 +22,10 @@
           <ul class="nav" id="main-menu">
             <li class="text-center">
               <img src="assets/img/find_user.png" class="user-image img-responsive"/>
-              <a href="#"><i class="fa fa-sitemap fa-3x"></i>Unput<span class="fa arrow"></span></a>
+              <a href="#"><i class="fa fa-sitemap fa-3x"></i>Basic<span class="fa arrow"></span></a>
               <ul class="nav nav-second-level">
                 <li>
-                  <a href="#">Example 1</a>
+                  <a href="index.html">Example 1</a>
                 </li>
                 <li>
                    <a href="practice-2.html">Module 2 </a>
